# AI-Blood-Test-Analyzer-using-CrewAI

./: .gitignore  readme.md  requirements.txt  run.py
app/: __init__.py  crewai_agent.py  pdf_processing.py  routes.py
backend/bloodreportanalysercrew/: .env  pyproject.toml  report.md
backend/bloodreportanalysercrew/src/: api.py  generated_report.txt  report.md  requirements.txt
backend/bloodreportanalysercrew/src/bloodreportanalysercrew/: crew.py  main.py
backend/bloodreportanalysercrew/src/bloodreportanalysercrew/config/: agents.yaml  tasks.yaml
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: home.js
templates/: index.html  results.html
